--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -26,6 +28,8 @@
 
         <activity android:name=".LocalPictureSelectorActivity" />
         <activity android:name=".OnlineMp4PlaybackActivity" />
+        <activity android:name=".AudioRecordAndAudioTrackActivity" />
+        <activity android:name=".OpenSLESActivity" />
     </application>
 
 </manifest>
