--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:label="@string/title_activity_audio_play"
             android:theme="@style/Theme.SarAndroidFunctions" />
         <activity
+            android:name=".AudioRecordAndPlayAtSameTimeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_audio_record_and_play_at_same_time"
+            android:theme="@style/Theme.SarAndroidFunctions" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
